--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/react": "^4.1.0",
     "@astrojs/tailwind": "^5.1.3",
+    "@astrojs/vercel": "^8.0.1",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
     "astro": "^5.0.5",
